src/objects/Harvest_Expense__c.object
<CustomObject>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Expense Category</label>
        <referenceTo>Harvest_Expense_Category__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Harvest_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Harvest_Project__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Harvest_Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receipt_URL__c</fullName>
        <label>Receipt URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spent_at__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Harvest Expense</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Harvest Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>